total hourly counts by date and time

--- a/Project_Ruo.ipynb
+++ b/Project_Ruo.ipynb
@@ -11709,7 +11709,346 @@
    "source": [
     "# Exporting merged data to csv\n",
     "merged_clean_data.to_csv(\"output/merged_clean_data.csv\", index = False)\n",
-    "print(\"Exported datafrome to csv!\")"
+    "print(\"Exported dataframe to csv!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sensor ID</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Hourly counts (2019)</th>\n",
+       "      <th>Hourly counts (2020)</th>\n",
+       "      <th>Day (2019)</th>\n",
+       "      <th>Day (2020)</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Sensor name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>96</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>May</td>\n",
+       "      <td>Bourke Street Mall (North)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>71</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>May</td>\n",
+       "      <td>Bourke Street Mall (North)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>30</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>May</td>\n",
+       "      <td>Bourke Street Mall (North)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>May</td>\n",
+       "      <td>Bourke Street Mall (North)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>19</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>May</td>\n",
+       "      <td>Bourke Street Mall (North)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Sensor ID  Date  Time  Hourly counts (2019)  Hourly counts (2020)  \\\n",
+       "0          1     1     0                    96                     9   \n",
+       "1          1     1     1                    71                     2   \n",
+       "2          1     1     2                    30                     2   \n",
+       "3          1     1     3                     8                     5   \n",
+       "4          1     1     4                    19                     4   \n",
+       "\n",
+       "  Day (2019) Day (2020) Month                 Sensor name  \n",
+       "0  Wednesday     Friday   May  Bourke Street Mall (North)  \n",
+       "1  Wednesday     Friday   May  Bourke Street Mall (North)  \n",
+       "2  Wednesday     Friday   May  Bourke Street Mall (North)  \n",
+       "3  Wednesday     Friday   May  Bourke Street Mall (North)  \n",
+       "4  Wednesday     Friday   May  Bourke Street Mall (North)  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# import merged_clean_data\n",
+    "merged_clean_data = \"output/merged_clean_data.csv\"\n",
+    "merged_clean_data = pd.read_csv(merged_clean_data)\n",
+    "merged_clean_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Day (2019)</th>\n",
+       "      <th>Day (2020)</th>\n",
+       "      <th>Total hourly counts (2019)</th>\n",
+       "      <th>Toal hourly counts (2020)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>3236</td>\n",
+       "      <td>566</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>1822</td>\n",
+       "      <td>401</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>1009</td>\n",
+       "      <td>311</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>844</td>\n",
+       "      <td>359</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>846</td>\n",
+       "      <td>354</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195</th>\n",
+       "      <td>9</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>799</td>\n",
+       "      <td>385</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>9</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>782</td>\n",
+       "      <td>369</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>9</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>2604</td>\n",
+       "      <td>690</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>9</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>10281</td>\n",
+       "      <td>1183</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>9</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>25424</td>\n",
+       "      <td>1730</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>200 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Date  Time Day (2019) Day (2020)  Total hourly counts (2019)  \\\n",
+       "0       1     0  Wednesday     Friday                        3236   \n",
+       "1       1     1  Wednesday     Friday                        1822   \n",
+       "2       1     2  Wednesday     Friday                        1009   \n",
+       "3       1     3  Wednesday     Friday                         844   \n",
+       "4       1     4  Wednesday     Friday                         846   \n",
+       "..    ...   ...        ...        ...                         ...   \n",
+       "195     9     3   Thursday   Saturday                         799   \n",
+       "196     9     4   Thursday   Saturday                         782   \n",
+       "197     9     5   Thursday   Saturday                        2604   \n",
+       "198     9     6   Thursday   Saturday                       10281   \n",
+       "199     9     7   Thursday   Saturday                       25424   \n",
+       "\n",
+       "     Toal hourly counts (2020)  \n",
+       "0                          566  \n",
+       "1                          401  \n",
+       "2                          311  \n",
+       "3                          359  \n",
+       "4                          354  \n",
+       "..                         ...  \n",
+       "195                        385  \n",
+       "196                        369  \n",
+       "197                        690  \n",
+       "198                       1183  \n",
+       "199                       1730  \n",
+       "\n",
+       "[200 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# group data by three columns for hourly counts total\n",
+    "groupped_by_date_time = merged_clean_data.groupby([\"Date\",\"Time\",\"Day (2019)\",\"Day (2020)\"]).agg({\"Hourly counts (2019)\":\"sum\", \"Hourly counts (2020)\":\"sum\"}).reset_index()\n",
+    "\n",
+    "# rename the columns to make more readable\n",
+    "\n",
+    "groupped_by_date_time = groupped_by_date_time.rename(columns = {\n",
+    "    \"Hourly counts (2019)\" : \"Total hourly counts (2019)\",\n",
+    "    \"Hourly counts (2020)\": \"Toal hourly counts (2020)\",\n",
+    "}\n",
+    ")\n",
+    "\n",
+    "groupped_by_date_time.head(200)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exported dataframe to csv!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# export to csv\n",
+    "groupped_by_date_time.to_csv(\"output/groupped_by_date_time.csv\", index = False)\n",
+    "print(\"Exported dataframe to csv!\")\n"
    ]
   },
   {
