heat map included

--- a/Project_Ruo.ipynb
+++ b/Project_Ruo.ipynb
@@ -22176,6 +22176,206 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 310,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sensor ID</th>\n",
+       "      <th>Sensor name</th>\n",
+       "      <th>Total count 2019 by sensor</th>\n",
+       "      <th>Total count 2020 by sensor</th>\n",
+       "      <th>Change in count</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Absolute value of change</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>22</td>\n",
+       "      <td>Flinders St-Elizabeth St (East)</td>\n",
+       "      <td>1337425</td>\n",
+       "      <td>445791</td>\n",
+       "      <td>-891634</td>\n",
+       "      <td>-37.817864</td>\n",
+       "      <td>144.965068</td>\n",
+       "      <td>891634</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>24</td>\n",
+       "      <td>Spencer St-Collins St (North)</td>\n",
+       "      <td>1098166</td>\n",
+       "      <td>210379</td>\n",
+       "      <td>-887787</td>\n",
+       "      <td>-37.818880</td>\n",
+       "      <td>144.954492</td>\n",
+       "      <td>887787</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Flinders Street Station Underpass</td>\n",
+       "      <td>1040433</td>\n",
+       "      <td>190959</td>\n",
+       "      <td>-849474</td>\n",
+       "      <td>-37.819117</td>\n",
+       "      <td>144.965583</td>\n",
+       "      <td>849474</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Princes Bridge</td>\n",
+       "      <td>958937</td>\n",
+       "      <td>156405</td>\n",
+       "      <td>-802532</td>\n",
+       "      <td>-37.818742</td>\n",
+       "      <td>144.967877</td>\n",
+       "      <td>802532</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Town Hall (West)</td>\n",
+       "      <td>1008211</td>\n",
+       "      <td>245937</td>\n",
+       "      <td>-762274</td>\n",
+       "      <td>-37.814880</td>\n",
+       "      <td>144.966088</td>\n",
+       "      <td>762274</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Sensor ID                        Sensor name Total count 2019 by sensor  \\\n",
+       "0        22    Flinders St-Elizabeth St (East)                    1337425   \n",
+       "1        24      Spencer St-Collins St (North)                    1098166   \n",
+       "2         6  Flinders Street Station Underpass                    1040433   \n",
+       "3         5                     Princes Bridge                     958937   \n",
+       "4         4                   Town Hall (West)                    1008211   \n",
+       "\n",
+       "  Total count 2020 by sensor  Change in count   Latitude   Longitude  \\\n",
+       "0                     445791          -891634 -37.817864  144.965068   \n",
+       "1                     210379          -887787 -37.818880  144.954492   \n",
+       "2                     190959          -849474 -37.819117  144.965583   \n",
+       "3                     156405          -802532 -37.818742  144.967877   \n",
+       "4                     245937          -762274 -37.814880  144.966088   \n",
+       "\n",
+       "   Absolute value of change  \n",
+       "0                    891634  \n",
+       "1                    887787  \n",
+       "2                    849474  \n",
+       "3                    802532  \n",
+       "4                    762274  "
+      ]
+     },
+     "execution_count": 310,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Just learnt that the weight for a heat map cannot be negative!!!!\n",
+    "# need to convert the change value to positive\n",
+    "top_5_changed_sensors[\"Absolute value of change\"] = top_5_changed_sensors[\"Change in count\"].abs()\n",
+    "top_5_changed_sensors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 308,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gmaps.configure(api_key=g_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 326,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NOTE: Do not change any of the code in this cell\n",
+    "\n",
+    "# Using the template add the hotel marks to the heatmap\n",
+    "info_box_template = \"\"\"\n",
+    "<dl>\n",
+    "<dt>Name</dt><dd>{Hotel}</dd>\n",
+    "<dt>City</dt><dd>{City}</dd>\n",
+    "\n",
+    "</dl>\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 333,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "db3e458d28da477bb599917f17dc5f4d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "location = top_5_changed_sensors[[\"Latitude\",\"Longitude\"]]\n",
+    "weight = top_5_changed_sensors[\"Absolute value of change\"]\n",
+    "sensor_info = top_5_changed_sensors[\"Change in count\"].astype(str)\n",
+    "fig = gmaps.figure()\n",
+    "\n",
+    "heat = gmaps.heatmap_layer(location, weights = weight)\n",
+    "\n",
+    "heat.point_radius = 40\n",
+    "\n",
+    "fig.add_layer(heat)\n",
+    "\n",
+    "\n",
+    "marker_layer = gmaps.marker_layer(location, info_box_content=sensor_info)\n",
+    "\n",
+    "\n",
+    "fig.add_layer(marker_layer)\n",
+    "\n",
+    "\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
