--- a/Project_Ruo.ipynb
+++ b/Project_Ruo.ipynb
@@ -22449,7 +22449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -22481,6 +22481,7 @@
        "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
        "      <th>Absolute value of change</th>\n",
+       "      <th>Sensor label</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -22494,6 +22495,7 @@
        "      <td>-37.817864</td>\n",
        "      <td>144.965068</td>\n",
        "      <td>891634</td>\n",
+       "      <td>Flinders St-Elizabeth St (East): 891634 less</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -22505,6 +22507,7 @@
        "      <td>-37.818880</td>\n",
        "      <td>144.954492</td>\n",
        "      <td>887787</td>\n",
+       "      <td>Spencer St-Collins St (North): 887787 less</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -22516,6 +22519,7 @@
        "      <td>-37.819117</td>\n",
        "      <td>144.965583</td>\n",
        "      <td>849474</td>\n",
+       "      <td>Flinders Street Station Underpass: 849474 less</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -22527,6 +22531,7 @@
        "      <td>-37.818742</td>\n",
        "      <td>144.967877</td>\n",
        "      <td>802532</td>\n",
+       "      <td>Princes Bridge: 802532 less</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -22538,6 +22543,7 @@
        "      <td>-37.814880</td>\n",
        "      <td>144.966088</td>\n",
        "      <td>762274</td>\n",
+       "      <td>Town Hall (West): 762274 less</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -22549,6 +22555,7 @@
        "      <td>-37.813494</td>\n",
        "      <td>144.965153</td>\n",
        "      <td>709923</td>\n",
+       "      <td>Bourke Street Mall (North): 709923 less</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -22560,6 +22567,7 @@
        "      <td>-37.821299</td>\n",
        "      <td>144.968793</td>\n",
        "      <td>623801</td>\n",
+       "      <td>The Arts Centre: 623801 less</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -22571,6 +22579,7 @@
        "      <td>-37.819830</td>\n",
        "      <td>144.951026</td>\n",
        "      <td>594203</td>\n",
+       "      <td>Southern Cross Station: 594203 less</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -22582,6 +22591,7 @@
        "      <td>-37.820178</td>\n",
        "      <td>144.965089</td>\n",
        "      <td>559380</td>\n",
+       "      <td>Southbank: 559380 less</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -22593,6 +22603,7 @@
        "      <td>-37.817673</td>\n",
        "      <td>144.950256</td>\n",
        "      <td>550080</td>\n",
+       "      <td>Bourke St Bridge: 550080 less</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -22623,20 +22634,20 @@
        "8                     240025          -559380 -37.820178  144.965089   \n",
        "9                      37746          -550080 -37.817673  144.950256   \n",
        "\n",
-       "   Absolute value of change  \n",
-       "0                    891634  \n",
-       "1                    887787  \n",
-       "2                    849474  \n",
-       "3                    802532  \n",
-       "4                    762274  \n",
-       "5                    709923  \n",
-       "6                    623801  \n",
-       "7                    594203  \n",
-       "8                    559380  \n",
-       "9                    550080  "
+       "   Absolute value of change                                    Sensor label  \n",
+       "0                    891634    Flinders St-Elizabeth St (East): 891634 less  \n",
+       "1                    887787      Spencer St-Collins St (North): 887787 less  \n",
+       "2                    849474  Flinders Street Station Underpass: 849474 less  \n",
+       "3                    802532                     Princes Bridge: 802532 less  \n",
+       "4                    762274                   Town Hall (West): 762274 less  \n",
+       "5                    709923         Bourke Street Mall (North): 709923 less  \n",
+       "6                    623801                    The Arts Centre: 623801 less  \n",
+       "7                    594203             Southern Cross Station: 594203 less  \n",
+       "8                    559380                          Southbank: 559380 less  \n",
+       "9                    550080                   Bourke St Bridge: 550080 less  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -22645,13 +22656,32 @@
     "# Just learnt that the weight for a heat map cannot be negative!!!!\n",
     "# need to convert the change value to positive\n",
     "top_10_changed_sensors[\"Absolute value of change\"] = top_10_changed_sensors[\"Change in count\"].abs()\n",
-    "\n",
+    "top_10_changed_sensors[\"Sensor label\"] = top_10_changed_sensors[\"Sensor name\"] + \": \" + top_10_changed_sensors[\"Absolute value of change\"].astype(str) + \" less\"\n",
     "top_10_changed_sensors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exported dataframe to csv!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# to csv\n",
+    "top_10_changed_sensors.to_csv(\"output/top_10_changed_sensors.csv\", index = False)\n",
+    "print(\"Exported dataframe to csv!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22660,31 +22690,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# NOTE: Do not change any of the code in this cell\n",
-    "\n",
-    "# Using the template add the hotel marks to the heatmap\n",
-    "info_box_template = \"\"\"\n",
-    "<dl>\n",
-    "<dt>Name</dt><dd>{Hotel}</dd>\n",
-    "<dt>City</dt><dd>{City}</dd>\n",
-    "\n",
-    "</dl>\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a254a42029340cd84e94163c688d000",
+       "model_id": "7d3b8bec6e3349cc8b1a35aea388284b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -22699,8 +22711,9 @@
    "source": [
     "location = top_10_changed_sensors[[\"Latitude\",\"Longitude\"]]\n",
     "weight = top_10_changed_sensors[\"Absolute value of change\"]\n",
-    "#sensor_info = top_10_changed_sensors[\"Change in count\"].astype(str)\n",
-    "sensor_info = top_10_changed_sensors[\"Sensor name\"].astype(str)\n",
+    "\n",
+    "sensor_info = top_10_changed_sensors[\"Sensor label\"].astype(str)\n",
+    "\n",
     "fig = gmaps.figure()\n",
     "\n",
     "heat = gmaps.heatmap_layer(location, weights = weight)\n",
@@ -22712,7 +22725,7 @@
     "marker_layer = gmaps.marker_layer(location, info_box_content=sensor_info)\n",
     "\n",
     "\n",
-    "#fig.add_layer(marker_layer)\n",
+    "fig.add_layer(marker_layer)\n",
     "\n",
     "\n",
     "fig"
