--- a/Project_Ruo.ipynb
+++ b/Project_Ruo.ipynb
@@ -11751,8 +11751,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#-----------------------------------\n",
-    "# create the bar chart for total monthly counts\n"
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#--------------------------------------------------\n",
+    "# create the bar chart for total monthly counts    \n",
+    "#--------------------------------------------------\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -13051,8 +13059,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "#--------------------------------------------------------\n",
-    "# prepare the line chart for total counts by time period \n"
+    "# prepare the line chart for total counts by time period \n",
+    "#---------------------------------------------------------\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -15027,8 +15043,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "#--------------------------------------------------------\n",
-    "# prepare the pie chart for total counts by week"
+    "# prepare the pie chart for total counts by week\n",
+    "#------------------------------------------------------\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -18658,9 +18683,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#-------------------------------------------------------\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#-----------------------------------------------------------------------------------\n",
     "# Final part is for the top ten significant changed sensors on a heat map\n",
-    "# To start with, don't worry about Lat/Long ntil we have the final statistic table "
+    "# To start with, don't worry about Lat/Long ntil we have the final statistic table \n",
+    "#-----------------------------------------------------------------------------------\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
