--- a/SensorHeatMap.ipynb
+++ b/SensorHeatMap.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "4  Wednesday     Friday   May  Bourke Street Mall (North)  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "4     Bourke St-Russell St (West)                471910                109694"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +655,7 @@
        "45                            Webb Bridge        "
       ]
      },
-     "execution_count": 134,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -755,8 +755,8 @@
       "The latitude for Flinders St-Elizabeth St (East), Melbourne, Australia is -37.8181479 and the longtitude is 144.9648712.\n",
       "------------\n",
       "Retrieving Results for Index 15: Flinders St-Spark La, Melbourne, Australia.\n",
-      "{'lat': -37.8163525, 'lng': 144.9650086}\n",
-      "The latitude for Flinders St-Spark La, Melbourne, Australia is -37.8163525 and the longtitude is 144.9650086.\n",
+      "{'lat': -37.8182711, 'lng': 144.9670618}\n",
+      "The latitude for Flinders St-Spark La, Melbourne, Australia is -37.8182711 and the longtitude is 144.9670618.\n",
       "------------\n",
       "Retrieving Results for Index 16: Flinders Street Station Underpass, Melbourne, Australia.\n",
       "{'lat': -37.8182711, 'lng': 144.9670618}\n",
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -965,13 +965,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c7cce7ba9a414036b8066ffa507a1038",
+       "model_id": "5fd10cfde15e4e25a2a35ad718229f9f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1014,13 +1014,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "adddd1e1ba094282aa0be059bdce35aa",
+       "model_id": "2b7f276d31744a72b7ad04f6e7ddf4b9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1052,141 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Hourly counts (2019)</th>\n",
-       "      <th>Hourly counts (2020)</th>\n",
-       "      <th>Sensor name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>1337425</td>\n",
-       "      <td>445791</td>\n",
-       "      <td>Flinders St-Elizabeth St (East)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>1098166</td>\n",
-       "      <td>210379</td>\n",
-       "      <td>Spencer St-Collins St (North)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>1040433</td>\n",
-       "      <td>190959</td>\n",
-       "      <td>Flinders Street Station Underpass</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>1008211</td>\n",
-       "      <td>245937</td>\n",
-       "      <td>Town Hall (West)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>979720</td>\n",
-       "      <td>269797</td>\n",
-       "      <td>Bourke Street Mall (North)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>958937</td>\n",
-       "      <td>156405</td>\n",
-       "      <td>Princes Bridge</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>799405</td>\n",
-       "      <td>240025</td>\n",
-       "      <td>Southbank</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>728549</td>\n",
-       "      <td>104748</td>\n",
-       "      <td>The Arts Centre</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>675960</td>\n",
-       "      <td>212147</td>\n",
-       "      <td>Melbourne Central-Elizabeth St (East)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>661180</td>\n",
-       "      <td>66977</td>\n",
-       "      <td>Southern Cross Station</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Hourly counts (2019)  Hourly counts (2020)  \\\n",
-       "14               1337425                445791   \n",
-       "37               1098166                210379   \n",
-       "16               1040433                190959   \n",
-       "42               1008211                245937   \n",
-       "5                 979720                269797   \n",
-       "27                958937                156405   \n",
-       "35                799405                240025   \n",
-       "40                728549                104748   \n",
-       "23                675960                212147   \n",
-       "36                661180                 66977   \n",
-       "\n",
-       "                              Sensor name  \n",
-       "14        Flinders St-Elizabeth St (East)  \n",
-       "37          Spencer St-Collins St (North)  \n",
-       "16      Flinders Street Station Underpass  \n",
-       "42                       Town Hall (West)  \n",
-       "5              Bourke Street Mall (North)  \n",
-       "27                         Princes Bridge  \n",
-       "35                              Southbank  \n",
-       "40                        The Arts Centre  \n",
-       "23  Melbourne Central-Elizabeth St (East)  \n",
-       "36                 Southern Cross Station  "
-      ]
-     },
-     "execution_count": 168,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Identify top 10 most popular locations\n",
-    "top_10_2019 = pd.DataFrame(sensor_grouped_df[[\"Hourly counts (2019)\", \"Hourly counts (2020)\", \"Sensor name\"]])\n",
-    "top_10_2019 = top_10_2019.sort_values(by=['Hourly counts (2019)'], ascending=False)\n",
-    "top_10_2019.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1202,13 +1068,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65fa31cb4fe64499a455cabe946d30c8",
+       "model_id": "ab34743d9e374c4ab20ef8f2bfbd502b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1240,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1256,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 19,
    "metadata": {
     "scrolled": false
    },
@@ -1264,7 +1130,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f6c8408d7c1a49a1abd22a1812b03a0a",
+       "model_id": "4d72c96cfa9f43a5ba40961916b0a5cb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1300,6 +1166,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
